--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,5 +27,11 @@
             "submit": "Submit",
             "back": "Back"
         }
+    },
+    "customer" : {
+        "edit":"Edit",
+        "code":"Customer Code",
+        "name":"Customer Name",
+        "delete":"Delete"
     }
 }
