--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -27,5 +27,11 @@
             "submit": "ยืนยัน",
             "back": "กลับ"
         }
+    },
+    "customer" : {
+        "edit":"แก้ไข",
+        "code":"รหัสลูกค้า",
+        "name":"ชื่อลูกค้า",
+        "delete":"ลบ"
     }
 }
