--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -28,10 +28,19 @@
             "back": "Back"
         }
     },
-    "customer" : {
-        "edit":"Edit",
-        "code":"Customer Code",
-        "name":"Customer Name",
-        "delete":"Delete"
+    "customer": {
+        "edit": "Edit",
+        "code": "Customer Code",
+        "name": "Customer Name",
+        "delete": "Delete"
+    },
+    "user": {
+        "email": "E-Mail",
+        "firstName": "First Name",
+        "lastName": "Last Name",
+        "password": "Password",
+        "re_password": "Re-Password",
+        "mobile": "Mobile Phone",
+        "picture": "Picture"
     }
 }
