--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -33,5 +33,14 @@
         "code":"รหัสลูกค้า",
         "name":"ชื่อลูกค้า",
         "delete":"ลบ"
+    },
+    "user": {
+        "email": "อีเมลล์",
+        "firstName": "ชื่อ",
+        "lastName": "นามสกุล",
+        "password": "รหัสผ่าน",
+        "re_password": "ยืนยันรหัสผ่าน",
+        "mobile": "โทรศัพท์",
+        "picture": "รูปภาพ"
     }
 }
